Added fromDTO methods